# human_match

./: README.md  pyproject.toml
.github/workflows/: ci.yml
human_match/: __init__.py  arabic.py  core.py  data_loader.py  english.py  french.py  german.py  italian.py  language_detection.py  mandarin.py  matcher.py  portuguese.py  russian.py  spanish.py  utils.py
human_match/data/: __init__.py
human_match/data/diminuitives/: ar  de  en  es  fr  it  pt  ru  zh
human_match/data/honorifics/: ar  de  en  es  fr  it  pt  ru  zh
tests/: __init__.py  advanced.csv  similar_names.csv  test_all.py  test_core_algorithms.py  test_match_arabic.py  test_match_english.py  test_match_french.py  test_match_german.py  test_match_italian.py  test_match_mandarin.py  test_match_portuguese.py  test_match_russian.py  test_match_spanish.py
