[project]
name = "human-match"
version = "0.2.0"
description = "Advanced human name matching engine with multi-language support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jellyfish>=1.1.0",
    "python-Levenshtein>=0.25.0",
    "unidecode>=1.3.8",
    "nameparser>=1.1.3",
    "gender-guesser>=0.4.0",
    "metaphone>=0.6",
    "phonetics>=1.0.5",
    "langdetect>=1.0.9",
    "pypinyin>=0.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["human_match"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
